# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml  fly.toml  mise.toml
.sqlx/: query-107ca1aa539f8f01ddd2cc186a78a8ac5f8c1906b23808619b67eb1f14d6ccf1.json  query-10bd358f0c575a1349fd1185c817aa4165c4db5df2e10db2a515e11339669e80.json  query-46620c44455ff3fdcdec5a5eb448f42f1d25cde398f04b0767fd4a44354c8f79.json  query-b1e51d9c64b3d93ee881899d26635b16e52c349294d7d190d01ee665f2ec5a72.json  query-b2a611c60f4eaf89a19ca8f690c7a1acac8e74290764fb63b4a33aca2178f93a.json  query-ba5d9276f20c2b378f9153ec510f30ea7f24d27dccbf6a23acc789c45abb8186.json  query-cea63f61b58f6cd641720064b653d8c4a83e49af91d032d68b03a40840be004b.json  query-d367b7caf3ef26f158f436216f55d2687d2eb97e390606edd541d036c03e3b92.json  query-ef020cdb2c7a6cbffcc11d87e38e27688251ce5d56fba1c3adbc7d447c9df058.json
configuration/: base.yaml  production.yaml
migrations/: 20250502112329_make_status_not_null_in_subscriptions.sql  20250502112530_create_subscription_tokens_table.sql  20250502124631_rename_status_pending_to_pending_confirmation.sql
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
templates/: email_confirmation.html
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
