[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
config = "0.15.11"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "~0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = { version = "~0.1", features = ["log"] }
tracing-subscriber = { version = "~0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "~0.3"
tracing-log = "~0.2"
secrecy = { version = "~0.10", features = ["serde"] }
tracing-actix-web = "~0.7"
serde-aux = "4"
unicode-segmentation = "1"
validator = "~0.20"
reqwest = { version = "~0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rand = { version = "~0.9", features = ["std_rng"] }
tera = "1"

[dev-dependencies]
claims = "~0.8"
fake = "4"
linkify = "0.10"
quickcheck = "1"
quickcheck_macros = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6"
